基本功能以全部实现
搜索功能还需优化
弹出文档名称需优化

--- a/wordCloud/mystyle.css
+++ b/wordCloud/mystyle.css
@@ -2,7 +2,7 @@
 .search{
     background-color: transparent;
     border: 0;
-    color: #ffffff;
+    color: #000;
     font-size: 12pt;
     height: 35px;
     width: 400px;
